--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-8 col-lg-9 px-2 py-4">
+        <div class="col-8 col-lg-9 p-4">
             @RenderBody()
         </div>
     </div>
