--- a/GeneticAlgNetControl/Pages/Error.cshtml
+++ b/GeneticAlgNetControl/Pages/Error.cshtml
@@ -2,6 +2,7 @@
 @model ErrorModel
 @{
     ViewData["Title"] = "Error";
+    ViewData["ActivePage"] = "Error";
 }
 
 <div class="h4 text-danger my-4">
