--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -17,7 +17,35 @@
                 </div>
             </div>
             <div class="flex-grow-1 w-100">
-                <partial name="_NavigationPartial" />
+                <div class="nav flex-column">
+                    @{
+                        var activePage = (string)ViewData["ActivePage"];
+                    }
+                    <a asp-page="/Index" class="d-flex flex-column justify-content-center nav-link bg-dark text-white py-1 @(activePage == "Home" ? "active" : string.Empty)">
+                        <div class="row">
+                            <span class="col-10 font-weight-bold text-left text-wrap">Home</span>
+                            <span class="col-2 text-center"><i class="fas fa-home"></i></span>
+                        </div>
+                    </a>
+                    <a asp-page="/Overview" class="d-flex flex-column justify-content-center nav-link bg-dark text-white py-1 @(activePage == "Overview" ? "active" : string.Empty)">
+                        <div class="row">
+                            <span class="col-10 font-weight-bold text-left text-wrap">Overview</span>
+                            <span class="col-2 text-center"><i class="fas fa-chart-bar"></i></span>
+                        </div>
+                    </a>
+                    <a asp-page="/Create" class="d-flex flex-column justify-content-center nav-link bg-dark text-white py-1 @(activePage == "Create" ? "active" : string.Empty)">
+                        <div class="row">
+                            <span class="col-10 font-weight-bold text-left text-wrap">Create</span>
+                            <span class="col-2 text-center"><i class="fas fa-plus-circle"></i></span>
+                        </div>
+                    </a>
+                    <a asp-page="/About" class="d-flex flex-column justify-content-center nav-link bg-dark text-white py-1 @(activePage == "About" ? "active" : string.Empty)">
+                        <div class="row">
+                            <span class="col-10 font-weight-bold text-left text-wrap">About</span>
+                            <span class="col-2 text-center"><i class="fas fa-question-circle"></i></span>
+                        </div>
+                    </a>
+                </div>
             </div>
             <div class="flex-grow-0">
                 <div class="text-light">
@@ -25,13 +53,15 @@
                 </div>
             </div>
         </div>
-        <div class="col-8 col-lg-9 p-4">
+        <div class="col-8 col-lg-9 px-4 py-5">
             @RenderBody()
         </div>
     </div>
     <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/twitter-bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
     <script src="~/lib/font-awesome/js/all.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validate/jquery.validate.min.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="false"></script>
     @RenderSection("Scripts", required: false)
 </body>
