--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -49,11 +49,29 @@
             </div>
             <div class="flex-grow-0">
                 <div class="text-light">
-                    <span>&copy; 2019 - GeneticAlgNetControl</span>
+                    <span>&copy; @DateTime.Now.Year - Victor Popescu</span>
                 </div>
             </div>
         </div>
         <div class="col-8 col-lg-9 px-4 py-5">
+            @{ 
+                var statusMessage = (string)TempData["StatusMessage"];
+            }
+            @if (!string.IsNullOrEmpty(statusMessage))
+            {
+                var statusMessageType = statusMessage.StartsWith("Error") ? "danger" : statusMessage.StartsWith("Success") ? "success" : "info";
+                var statusMessageIcon = statusMessage.StartsWith("Error") ? "exclamation" : statusMessage.StartsWith("Success") ? "check" : "info";
+                var statusMessageText = string.Join(" ", statusMessage.Split(" ").Skip(1));
+                <div class="alert alert-@statusMessageType alert-dismissible text-wrap mb-3">
+                    <div>
+                        <span><i class="fas fa-@statusMessageIcon-circle"></i></span>
+                        <span>@statusMessageText</span>
+                    </div>
+                    <button type="button" class="close" data-dismiss="alert">
+                        <span><i class="fas fa-times"></i></span>
+                    </button>
+                </div>
+            }
             @RenderBody()
         </div>
     </div>
