--- a/GeneticAlgNetControl/Pages/Overview.cshtml
+++ b/GeneticAlgNetControl/Pages/Overview.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewData["Title"] = "Overview";
     ViewData["ActivePage"] = "Overview";
-    var statusMessage = (string)TempData["StatusMessage"];
 }
 
 <form method="get">
@@ -131,21 +130,6 @@
     </div>
 </form>
 <hr />
-@if (!string.IsNullOrEmpty(statusMessage))
-{
-    var statusMessageType = statusMessage.StartsWith("Error") ? "danger" : statusMessage.StartsWith("Success") ? "success" : "info";
-    var statusMessageIcon = statusMessage.StartsWith("Error") ? "exclamation" : statusMessage.StartsWith("Success") ? "check" : "info";
-    var statusMessageText = string.Join(" ", statusMessage.Split(" ").Skip(1));
-    <div class="alert alert-@statusMessageType alert-dismissible text-wrap mb-3">
-        <div>
-            <span><i class="fas fa-@statusMessageIcon-circle"></i></span>
-            <span>@statusMessageText</span>
-        </div>
-        <button type="button" class="close" data-dismiss="alert">
-            <span><i class="fas fa-times"></i></span>
-        </button>
-    </div>
-}
 <form method="get">
     <ul class="list-group list-group-flush item-group">
         <li class="list-group-item list-group-item-action list-group-item-dark active">
@@ -168,11 +152,11 @@
                 <div class="d-none d-xl-block col-xl-2 text-center text-truncate">
                     <span>Progress</span>
                 </div>
-                <div class="col-4 col-xl-3 d-flex flex-row flex-wrap justify-content-end">
+                <div class="col-4 col-xl-3 d-flex flex-row flex-wrap justify-content-center">
                     <a asp-page="/Create" class="btn btn-success m-1" title="Create">
                         <span><i class="fas fa-plus"></i></span>
                     </a>
-                    <button type="submit" asp-page="/Delete" class="btn btn-danger m-1" title="Delete" disabled>
+                    <button type="submit" asp-page="/Delete" class="btn btn-danger m-1 item-group-button" title="Delete" disabled>
                         <span><i class="fas fa-trash"></i></span>
                     </button>
                 </div>
@@ -222,14 +206,18 @@
                             </div>
                         </div>
                         <div class="d-none d-xl-block col-xl-2 text-center text-truncate">
-                            <span>@item.ProgressIterations</span>
-                            <span>@item.ProgressIterationsWithoutImprovement</span>
+                            <div>
+                                <span title="@item.ProgressIterations %">@item.ProgressIterations %</span>
+                            </div>
+                            <div>
+                                <span title="@item.ProgressIterationsWithoutImprovement %">@item.ProgressIterationsWithoutImprovement %</span>
+                            </div>
                         </div>
-                        <div class="col-4 col-xl-3 text-center text-wrap">
-                            <a asp-page="/Details" asp-route-id="@item.Id" class="btn btn-info my-1" title="Details">
+                        <div class="col-4 col-xl-3 d-flex flex-row flex-wrap justify-content-center">
+                            <a asp-page="/Details" asp-route-id="@item.Id" class="btn btn-info m-1" title="Details">
                                 <span><i class="fas fa-info-circle"></i></span>
                             </a>
-                            <a asp-page="/Delete" asp-route-id="@item.Id" class="btn btn-danger my-1" title="Delete">
+                            <a asp-page="/Delete" asp-route-id="@item.Id" class="btn btn-danger m-1" title="Delete">
                                 <span><i class="fas fa-trash"></i></span>
                             </a>
                         </div>
