--- a/GeneticAlgNetControl/Pages/Delete.cshtml
+++ b/GeneticAlgNetControl/Pages/Delete.cshtml
@@ -57,39 +57,45 @@
     {
         foreach (var item in Model.View.Items)
         {
+            var name = item.Name;
+            var id = item.Id;
+            var status = item.Status.ToString();
+            var timeSpan = item.DateTimePeriods.Select(item => (item.DateTimeEnded ?? DateTime.Now) - item.DateTimeStarted).Aggregate(TimeSpan.Zero, (sum, item) => sum + item);
+            var progressIterations = (double)item.CurrentIteration / item.MaximumIterations;
+            var progressIterationsWithoutImprovement = (double)item.CurrentIterationWithoutImprovement / item.MaximumIterationsWithoutImprovement;
             <li class="list-group-item list-group-item-action list-group-item-light item-group-item">
                 <div class="row align-items-center">
                     <div class="col-6 col-xl-3 text-center text-truncate">
                         <div>
-                            <span title="@item.Name" class="font-weight-bold">@item.Name</span>
+                            <span title="@name" class="font-weight-bold">@name</span>
                         </div>
                         <div>
-                            <span title="@item.Id" class="small">@item.Id</span>
+                            <span title="@id" class="small">@id</span>
                         </div>
                     </div>
                     <div class="col-2 col-xl-2 text-center text-truncate">
                         <div>
-                            <span title="@item.Status">@item.Status</span>
+                            <span title="@status">@status</span>
                         </div>
                     </div>
                     <div class="d-none d-xl-block col-xl-2 text-center text-truncate">
                         <div>
-                            <span title="@item.TimeSpan.ToString()">@item.TimeSpan.ToString()</span>
+                            <span title="@timeSpan">@timeSpan</span>
                         </div>
                     </div>
                     <div class="d-none d-xl-block col-xl-2 text-center text-truncate">
                         <div>
-                            <span title="@item.ProgressIterations %">@item.ProgressIterations %</span>
+                            <span title="@progressIterations %">@progressIterations %</span>
                         </div>
                         <div>
-                            <span title="@item.ProgressIterationsWithoutImprovement %">@item.ProgressIterationsWithoutImprovement %</span>
+                            <span title="@progressIterationsWithoutImprovement %">@progressIterationsWithoutImprovement %</span>
                         </div>
                     </div>
                     <div class="col-4 col-xl-3 d-flex flex-row flex-wrap justify-content-center">
-                        <a asp-page="/Details" asp-route-id="@item.Id" class="btn btn-info m-1" title="Details">
+                        <a asp-page="/Details" asp-route-id="@id" class="btn btn-info m-1" title="Details">
                             <span><i class="fas fa-info-circle"></i></span>
                         </a>
-                        <a asp-page="/Delete" asp-route-id="@item.Id" class="btn btn-danger m-1" title="Delete">
+                        <a asp-page="/Delete" asp-route-id="@id" class="btn btn-danger m-1" title="Delete">
                             <span><i class="fas fa-trash"></i></span>
                         </a>
                     </div>
