--- a/GeneticAlgNetControl/Pages/_Layout.cshtml
+++ b/GeneticAlgNetControl/Pages/_Layout.cshtml
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-8 col-lg-9 px-4 py-5">
+        <div class="col-8 col-lg-9 px-4 pt-4 pb-3">
             @{ 
                 var statusMessage = (string)TempData["StatusMessage"];
             }
